<resources>
    <string name="app_name">Alarming App</string>
    <string name="splash_app_name">Alarm App</string>
    <string name="fragment_dashboard_title">Dashboard</string>
    <string name="fragment_alarms_title">Alarms</string>
    <string name="fragment_alarm_details_title">Alarm Details</string>
    <string name="fragment_device_details_title">Device Details</string>
    <string name="label_critical">Critical</string>
    <string name="label_major">Major</string>
    <string name="label_minor">Minor</string>
    <string name="label_warning">Warning</string>
    <string name="label_active_alarms">Active Alarms</string>
    <string name="label_name">Name</string>
    <string name="label_externalID">External ID</string>
    <string name="label_message">Message</string>
    <string name="label_device">Device</string>
    <string name="label_system">System ID</string>
    <string name="label_created">Created at</string>
    <string name="label_lastUpdated">Last Updated</string>
    <string name="label_type">Type</string>
    <string name="label_status">Status</string>
    <string name="label_severity">Severity</string>
    <string name="label_active">Active</string>
    <string name="label_acknowledged">Acknowledged</string>
    <string name="label_cleared">Cleared</string>
    <string name="label_serial">Serial Number</string>
    <string name="label_severity_all">All degrees of severity</string>
    <string name="label_status_all">All Statuses</string>
    <string name="label_filter">My Filter</string>
    <string name="text_filter">Change filter criteria to view Alarms of interest.</string>
    <string name="label_watchlist">My Watchlist</string>
    <string name="text_watchlist">Define a watchlist for your focused alarms. You\'ll also receive push notifications when those Alarms change.</string>
    <string name="label_adjust_filter">Adjust Filter</string>
    <string name="label_emptyView">No Alarms matching your search filter.</string>
    <string name="text_emptyView">Refine your filter options.</string>
    <string name="text_add_comment">Add Comment</string>
    <string name="text_empty_comment">Write a comment and start collaborating.</string>
    <string name="tenant_text">Tenant</string>
    <string name="username_text">User Name</string>
    <string name="password_text">Password</string>
    <string name="login_text">Log in</string>
    <string name="login_hint">Log in to your account.</string>
    <string name="input_field_required">* Required</string>
    <string name="login_error_action">Understood</string>
    <string name="login_authentication_error_message">Please verify your credentials.</string>
    <string name="login_authentication_error_title">We couldn\'t log you in</string>
    <string name="logout_confirmation_dialog">Are you sure you want to logout?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
</resources>