<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.cumulocity.alarmapp.WelcomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sagLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sag_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="64dp" />

            <TextView
                android:id="@+id/loginHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sagLogo"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login_hint"
                android:textAlignment="viewStart"
                android:textAppearance="?attr/textAppearanceTitleMedium"></TextView>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sagLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminate="true"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/errorInputTenantField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginHint"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="48dp"
                android:clipChildren="false"
                style="@style/OutlinedBoxTextInputLayout"
                app:errorTextAppearance="?attr/textAppearanceCaption">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tenantField"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="left|center"
                    android:hint="@string/tenant_text"
                    android:singleLine="true"
                    android:inputType="text|textNoSuggestions"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/errorInputNameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorInputTenantField"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                style="@style/OutlinedBoxTextInputLayout"
                app:errorTextAppearance="?attr/textAppearanceCaption">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:hint="@string/username_text"
                    android:singleLine="true"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/errorInputPasswordField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorInputNameField"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                style="@style/OutlinedBoxTextInputLayout"
                app:errorTextAppearance="?attr/textAppearanceCaption"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_text"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/connectButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorInputPasswordField"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>